syntax = "proto3";
package crossme;

import "google/protobuf/timestamp.proto";

option go_package = "crossme.app/src/pb";

message Puzzle {
    string title = 1;
    string author = 2;
    string copyright = 3;
    string note = 4;
    int32 width = 5;
    int32 height = 6;

    repeated Cell squares = 8;
    repeated Clue across_clues = 9;
    repeated Clue down_clues = 10;

    Meta metadata = 11;

    message Cell {
        int32 number = 1;
        bool black = 2;
        bool circled = 3;
        string fill = 4;
        int32 clue_across = 5;
        int32 clue_down = 6;
    }

    message Clue {
        int32 number = 1;
        string text = 3;
    }

    message Meta {
        google.protobuf.Timestamp created = 1;

        // sha256 of the .puz file that imported to this puzzle, in
        // hex
        string sha256 = 2;

        // YYYY-MM-DD parsed date that the puzzle was published, or ""
        string date = 3;
    }
}
